# queso

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  launcher-source.tar.zst
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml  update-dependencies.yml
launcher/: Cargo.toml  main.zig
launcher/src/: format.rs  main.rs
scripts/: e2e-test.sh
src/: cli.rs  erl.rs  erts.rs  lib.rs  main.rs  pack.rs  payload.rs  project.rs  strip.rs  target.rs  tree_shake.rs
src/erl/: sidecar.erl
tests/: cli_tests.rs
tests/fixtures/beam/: documented.beam  simple.beam  with_literals.beam
tests/fixtures/minimal/: gleam.toml
tests/fixtures/with_config/: gleam.toml
tests/snapshots/: cli_tests__build_help.snap  cli_tests__build_invalid_target.snap  cli_tests__build_missing_gleam_toml.snap  cli_tests__cache_clean_help.snap  cli_tests__cache_clean_no_cache.snap  cli_tests__cache_clean_with_cache.snap  cli_tests__cache_help.snap  cli_tests__clean_help.snap  cli_tests__clean_missing_gleam_toml.snap  cli_tests__clean_no_artifacts.snap  cli_tests__clean_with_artifacts.snap  cli_tests__erts_with_multiple_targets.snap  cli_tests__help.snap
xtask/: Cargo.toml
xtask/src/: main.rs
